--- a/Model/news.ipynb
+++ b/Model/news.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
+    "import re\n",
+    "import string\n",
     "\n",
     "from sklearn.experimental import enable_halving_search_cv\n",
     "from sklearn.model_selection import train_test_split, HalvingGridSearchCV\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "from sklearn.linear_model import PassiveAggressiveClassifier\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, TextVectorization, Embedding\n",
+    "from tensorflow.keras.layers import GlobalAveragePooling1D\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping"
    ]
   },
   {
@@ -450,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "PassiveAggressiveClassifier(C=0.7, early_stopping=True, max_iter=3000,\n",
+       "PassiveAggressiveClassifier(C=0.2, early_stopping=True, max_iter=3000,\n",
        "                            random_state=42)"
       ]
      },
@@ -490,7 +498,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9344909234411997"
+       "0.9321231254932912"
       ]
      },
      "execution_count": 20,
@@ -510,8 +518,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[587,  41],\n",
-       "       [ 42, 597]])"
+       "array([[588,  40],\n",
+       "       [ 46, 593]])"
       ]
      },
      "execution_count": 21,
@@ -522,6 +530,178 @@
    "source": [
     "confusion_matrix(y_test, pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<5068x61359 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 1321067 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tdif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-03 10:57:59.303322: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-12-03 10:57:59.303390: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-12-03 10:57:59.303457: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (xviix): /proc/driver/nvidia/version does not exist\n",
+      "2022-12-03 10:57:59.345144: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential([\n",
+    "  Dense(256, activation='relu'),\n",
+    "  Dense(128, activation=\"relu\"),\n",
+    "  Dropout(0.2),\n",
+    "  Dense(64, activation=\"relu\"),\n",
+    "  Dense(16, activation=\"relu\"),\n",
+    "  Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "model.compile(\n",
+    "  loss=\"sparse_categoricalcrossentropy\",\n",
+    "  metrics=['accuracy'],\n",
+    "  optimizer = 'adam'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer(num_words=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.fit_on_texts(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tokenized = tokenizer.texts_to_sequences(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U.S. Secretary of State John F. Kerry said Monday that he will stop in Paris later this week, amid criticism that no top American officials attended Sunday’s unity march against terrorism.\n",
+      "\n",
+      "Kerry said he expects to arrive in Paris Thursday evening, as he heads home after a week abroad. He said he will fly to France at the conclusion of a series of meetings scheduled for Thursday in Sofia, Bulgaria. He plans to meet the next day with Foreign Minister Laurent Fabius and President Francois Hollande, then return to Washington.\n",
+      "\n",
+      "The visit by Kerry, who has family and childhood ties to the country and speaks fluent French, could address some of the criticism that the United States snubbed France in its darkest hour in many years.\n",
+      "\n",
+      "The French press on Monday was filled with questions about why neither President Obama nor Kerry attended Sunday’s march, as about 40 leaders of other nations did. Obama was said to have stayed away because his own security needs can be taxing on a country, and Kerry had prior commitments.\n",
+      "\n",
+      "Among roughly 40 leaders who did attend was Israeli Prime Minister Benjamin Netanyahu, no stranger to intense security, who marched beside Hollande through the city streets. The highest ranking U.S. officials attending the march were Jane Hartley, the ambassador to France, and Victoria Nuland, the assistant secretary of state for European affairs. Attorney General Eric H. Holder Jr. was in Paris for meetings with law enforcement officials but did not participate in the march.\n",
+      "\n",
+      "Kerry spent Sunday at a business summit hosted by India’s prime minister, Narendra Modi. The United States is eager for India to relax stringent laws that function as barriers to foreign investment and hopes Modi’s government will act to open the huge Indian market for more American businesses.\n",
+      "\n",
+      "In a news conference, Kerry brushed aside criticism that the United States had not sent a more senior official to Paris as “quibbling a little bit.” He noted that many staffers of the American Embassy in Paris attended the march, including the ambassador. He said he had wanted to be present at the march himself but could not because of his prior commitments in India.\n",
+      "\n",
+      "“But that is why I am going there on the way home, to make it crystal clear how passionately we feel about the events that have taken place there,” he said.\n",
+      "\n",
+      "“And I don’t think the people of France have any doubts about America’s understanding of what happened, of our personal sense of loss and our deep commitment to the people of France in this moment of trauma.”\n",
+      "[77, 2630, 81, 8, 31, 299, 10, 44, 248, 337, 191, 137, 204, 716, 207, 323, 3724, 58, 9, 182, 1108, 2, 718, 7, 81, 38, 8, 89, 120, 4251, 9, 47, 272, 91, 1912, 5, 600, 18, 474, 28, 5, 1173, 6, 4, 772, 81, 291, 8, 31, 299, 10, 248, 21, 39, 278, 207, 39, 167, 3350, 20, 5, 33, 447, 4349, 33, 447, 4349, 91, 33, 447, 3810, 4, 48, 37, 16, 5, 600, 37, 130, 17, 215, 8, 5, 27, 1, 1293, 8, 21, 81, 38, 117, 68, 1, 89, 484, 1, 672, 272, 24, 8, 91, 1, 175, 8, 1738, 65, 37, 1552, 18, 1488, 2, 5, 270, 23, 480, 15, 251, 2230, 37, 19, 5, 2378, 154, 38, 8, 2631, 3, 789, 110, 1738, 4, 8, 72, 5, 4743, 2, 68, 44, 7, 52, 24, 60, 378, 363, 49, 1303, 363, 4, 311, 17, 9, 1, 3, 44, 4887, 248, 2666, 59, 8, 56, 136, 3, 7, 111, 226, 7, 971, 4, 67, 790, 1087, 531, 207, 21, 1, 36, 1154, 1518, 8, 36, 27, 967, 81, 38, 8, 89, 6, 18, 3871, 91, 1912, 5, 600, 12, 24, 400, 2, 70, 13, 467, 808, 7, 311, 17, 189, 4, 3982, 6, 1, 472, 3, 751, 2896, 48, 1, 175, 51, 2822, 59, 42, 17, 60, 4, 60, 22, 100, 131, 1265, 42, 17, 4744, 485, 19, 5, 565, 3538, 133, 2, 628, 3, 364, 6, 1985, 56, 70, 248, 27, 7, 11, 1, 76, 2, 134, 8, 89, 5, 1985, 1089, 286, 10, 114, 848, 2, 1383, 4215, 1954, 8, 21, 326, 364, 207, 807, 9, 159, 167, 256, 3, 159, 27, 1957, 81, 4015, 38, 1, 131, 167, 714, 6, 9, 44, 4, 4483, 248, 170, 16, 47, 278, 4, 164, 117, 5, 600, 363, 49, 4887, 248, 130, 198, 6, 298, 554, 167, 59, 311, 17, 265, 730, 13, 7, 85, 48, 34, 608, 912, 399, 7, 265, 3168, 1089, 286]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train[2])\n",
+    "print(X_tokenized[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxlen = 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([135,  29, 809, ...,   0,   0,   0], dtype=int32)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_tokenized = pad_sequences(X_tokenized, maxlen=maxlen, padding='post')\n",
+    "X_tokenized[0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
